src/components/Header/NavBar/NavBar.css
@layer components {

    #js-mobile-nav.show {
        @apply opacity-100 z-10;
    }

    .nav-list-item:not(:first-child) {
        @apply mt-1 md:mt-0 md:ml-0.75;
    }

    .nav-list-link {
        @apply block p-1 px-1.5;
    }

    #js-nav-sublist.show {
        max-height: 280px;
        @apply px-1.5 py-0.5;
    }

    .nav-sublist-item {
        @apply py-0.75;
    }

    .nav-sublist-item:not(:first-child) {
        @apply mt-1;
    }

    #js-search-input.focused {
        @apply md:opacity-100 !important;
    }

    #js-search-icon.toggled {
        padding: 0;
    }

    #js-search-icon.toggled > svg {
        @apply md:scale-100 !important;
    }
}

